--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "assert": "^1.4.1",
     "express": "^4.13.3",
+    "geolib": "^2.0.24",
     "mongodb": "^3.1.10",
     "url": "^0.11.0",
     "validator": "^10.9.0"
